# Cpp_CMake_template

./: .clang-format  CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt  Documentation.tex
include/: CMakeLists.txt  project_defines.h
include/error/: exeception.h
src/: CMakeLists.txt  main.cpp
src/module/: module_class.cpp
test/: CMakeLists.txt
test/module/: module_test.cpp
